--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <!-- *************************music playe section *********************** -->
 
     <section class="music-player-section"> <!--active-->
-        <img src="img/IMG-20220504-WA0053.jpg" class="back-btn icon hide" alt="">
-        <img src="img/IMG-20220504-WA0051.jpg" class="nav-btn icon hide" alt="">
+        <i class="back-btn icon " > </i>
+        <i class="nav-btn icon"></i>
         <h1 class="current-song-name"></h1>
         <p class="artist-name hide">artist </p>
         <img src="img/IMG-20220504-WA0050.jpg" class="cover hide" alt="">
@@ -107,7 +107,7 @@
         <h1 class="title">playlist</h1>
         <div class="quence active">
             <div class="quence-cover">
-                <img src="img/IMG-20220504-WA0049.jpg" alt="">
+                <img src="img/IMG-20220504-WA0049.jpg alt="">
                 <i class="fas fa-pause"></i>
             </div>
             <p class="name">song 1</p>
