--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <!-- *************************music playe section *********************** -->
 
     <section class="music-player-section"> <!--active-->
-        <i class="back-btn icon " > </i>
-        <i class="nav-btn icon"></i>
+        <i class="fas back-btn fa-redo icon " > </i>
+        <i class="fas nav-btn icon"></i>
         <h1 class="current-song-name"></h1>
         <p class="artist-name hide">artist </p>
         <img src="img/IMG-20220504-WA0050.jpg" class="cover hide" alt="">
