--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section class="music-player-section"> <!--active-->
         <i class="fas back-btn fa-redo icon " > </i>
-        <i class="fas nav-btn fa-nav fa-play icon"></i>
+        <i class="fas nav-btn fa-nav fa-pre icon"></i>
         <h1 class="current-song-name"></h1>
         <p class="artist-name hide">artist </p>
         <img src="img/IMG-20220504-WA0050.jpg" class="cover hide" alt="">
@@ -103,7 +103,7 @@
     </section>
 
     <section class="playlist">
-        <!-- <img src="img/IMG-20220504-WA0047.jpg" class="back-btn icon"> -->
+        <i class="fas fa-fwd  icon"> </i>
         <h1 class="title">playlist</h1>
         <div class="quence active">
             <div class="quence-cover">
